<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsCardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <com.github.abdularis.civ.AvatarImageView
                    android:id="@+id/userDetailsPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:highlightEnable="false"
                    app:avatarBackgroundColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@android:color/white"
                    app:textSize="22sp" />

                <TextView
                    android:id="@+id/userDetailsName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/user_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/userDetailsPhoto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/userDetailsPhoto"
                    app:layout_constraintTop_toTopOf="@+id/userDetailsPhoto" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userDetailsAddress" />

            <TextView
                android:id="@+id/phoneValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/user_details_phone_value"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/user_phone_icon"
                app:layout_constraintBottom_toBottomOf="@+id/userDetailsPhone"
                app:layout_constraintStart_toStartOf="@+id/addressIcon"
                app:layout_constraintTop_toTopOf="@+id/phoneValue"
                app:srcCompat="@drawable/ic_baseline_phone_24" />

            <TextView
                android:id="@+id/userDetailsPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/user_details_phone_text"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@+id/phoneValue" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userDetailsPhone" />

            <TextView
                android:id="@+id/userDetailsEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/user_details_email_text"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/emailIcon"
                app:layout_constraintTop_toBottomOf="@+id/emailValue" />

            <TextView
                android:id="@+id/userDetailsAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/user_details_address_text"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/addressIcon"
                app:layout_constraintTop_toBottomOf="@+id/addressValue" />

            <ImageView
                android:id="@+id/addressIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/user_address_icon"
                app:layout_constraintBottom_toBottomOf="@+id/userDetailsAddress"
                app:layout_constraintStart_toStartOf="@+id/emailIcon"
                app:layout_constraintTop_toTopOf="@+id/addressValue"
                app:srcCompat="@drawable/ic_baseline_home_24" />

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/user_email_icon"
                app:layout_constraintBottom_toBottomOf="@+id/userDetailsEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/emailValue"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <TextView
                android:id="@+id/addressValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/user_details_address_value"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addressIcon"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/emailValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/user_details_email_value"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/emailIcon"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="240dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>